# business_intelligence_data

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start_dashboard.ps1
ai/: prompts.py  sql_chain.py
backend/api/: main.py
backend/api/routes/: ia.py  indicadores.py  kpi.py  vendas.py
backend/api/schemas/: vendas.py
backend/models/: __init__.py  customer.py  order.py  order_item.py  order_payment.py  product.py  venda.py
backend/repositories/: __init__.py  base.py  customer_repository.py  kpi_repository.py  order_item_repository.py  order_payment_repository.py  order_repository.py  product_repository.py  venda_repository.py
backend/services/: __init__.py  ia_service.py  indicador_service.py  kpi_service.py  venda_service.py
database/: connection.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: api_documentation.md  arquitetura.md  auditoria_projeto.md  dataset_olist_analysis.md  guia_instalacao.md  relatorio_final.md
etl/: __init__.py  extract.py  extract_olist.py  load.py  load_olist.py  transform.py  transform_olist.py
frontend/: app.py
frontend-react/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend-react/src/: App.tsx  index.css
frontend-react/src/components/: ChartCard.tsx  GradientSelector.tsx  KPICard.tsx
frontend-react/src/context/: ThemeContext.tsx
frontend-react/src/hooks/: useKPIs.ts
scripts/: carregar_olist.py  carregar_rapido.py
tests/: conftest.py
tests/unit/: test_etl.py  test_services.py
(+6 files in other folders)
